# python-project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  setup.cfg  tox.ini
docs/: index.html
src/firstpkg/: t.py
tests/: test_build.py
